# neven_cz

./: .gitignore  .vscode  README.md
context/references/pohoda/xml/: data.xsd
context/references/upgates/: upgates-xml-products.md  upgatesapiv2.apib
context/references/upgates/upgates-xml/: products-example-empty.xml  (+1 more)
modules/.data/db/: invoices.duckdb
modules/abra/: CHANGELOG.md  README.md  context-prompt.md  pyproject.toml  requirements.txt
modules/abra/.data/input/: faktura_vydana-leden_2025.xml  input_1-faktura-vydana_export-Abra.xml  output_1-target-pohodaimport_8_1_2025-14_52.xml
modules/abra/abra/: __init__.py  handlers.py
modules/abra/abra/agents/: __init__.py
modules/abra/abra/config/: __init__.py
modules/abra/abra/models/: __init__.py
modules/abra/abra/models/abra/: __init__.py
modules/abra/abra/models/flexibee/: __init__.py
modules/abra/abra/models/pohoda/: __init__.py
modules/abra/abra/tests/: __init__.py  test_models_abra.py
modules/upgates/: CHANGELOG.md  Dockerfile  README.md  context-prompt.md  docker-compose.yml  file.json  pyproject.toml  requirements.txt
modules/upgates/.data-old/input/: upgatesapiv2.apib
modules/upgates/docs/: INSTALLATION.md
modules/upgates/upgates/: ai.py  client.py  scheduler.py  upgates_client.py  webhook_server.py
modules/upgates/upgates/config/: __init__.py
modules/upgates/upgates/db/: duckdb_api.py  upgates_duckdb_api.py
modules/upgates/upgates/models/: parameters.py  products.py  translation.py
modules/upgates/upgates/tests/: test_api.py  test_cli.py  test_database.py
