[tool.poetry]
name = "upgates"
version = "0.1.1-dev"
description = ""
authors = ["Chris Ward <chris@calmrat.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
upgates = "upgates.bin.cli:cli"